# haskell-first-principles

./: 16-functor.hs  22-reader.hs  README.md  flake.nix  thing.hs
08-numbers-into-words/: flake.nix  numbers-into-words.cabal
08-numbers-into-words/app/: Apply.hs  Division.hs
08-numbers-into-words/src/: Recursion.hs  WordNumber.hs
08-numbers-into-words/test/: Main.hs
08-recursion/: numbers-into-words.cabal  test.nix
08-recursion/app/: EnumFun.hs  Main.hs
08-recursion/src/: CurryReview.hs  Division.hs  McCarthy91.hs
08-recursion/test/: Main.hs
09-lists/: ch09.cabal
09-lists/app/: Main.hs
09-lists/lib/: Bottom.hs  Char.hs  Cipher.hs  Comprehension.hs  EnumDef.hs  SquareCube.hs  StdFunc.hs  Words.hs  Zip.hs
09-lists/test/: Main.hs  TestBottom.hs  TestCipher.hs  TestComprehension.hs  TestSquareCube.hs  TestStdFunc.hs  TestWords.hs  TestZip.hs
10-folding-lists/: CHANGELOG.md  x10-folding-lists.cabal
10-folding-lists/src/: Database.hs  FoldExamples.hs  FoldPractice.hs  UnderstandingFolds.hs  WarmupAndReview.hs
10-folding-lists/test/: Main.hs  TestFoldPractice.hs  TestUnderstandingFolds.hs
11-algebraic-datatypes/: CHANGELOG.md  ch11.cabal
11-algebraic-datatypes/app/: 11-datatype.hs
11-algebraic-datatypes/lib/: Algebra.hs  BinaryTree.hs  ConDeStruct.hs  Datatype.hs  Doge.hs  Newtype.hs  NormalForm.hs  Programmers.hs
11-algebraic-datatypes/test/: Main.hs  TestBinaryTree.hs
13/: hello.cabal
13-hangman/: hangman.cabal
13-hangman/app/: Main.hs
13-hangman/data/: dict.txt
13-hangman/src/: Hangman.hs
13-hangman/test/: Main.hs
13/exe/: Main.hs
13/src/: DogsRule.hs  Hello.hs  Rain.hs
14-morse-code/: morse.cabal  test.nix
14-morse-code/app/: ArbFun.hs  Main.hs
14-morse-code/src/: Morse.hs
14-morse-code/test/: Main.hs
14-testing/: CHANGELOG.md  test.nix  x14-testing.cabal
14-testing/app/: Main.hs
14-testing/src/: MyLib.hs
14-testing/test/: Main.hs
15-monoid-semigroup/: CHANGELOG.md  x15-monoid-semigroup.cabal
15-monoid-semigroup/src/: Bull.hs  First.hs  Optional.hs  Semigroup.hs
15-monoid-semigroup/test/: Main.hs  Properties.hs  TestBull.hs  TestFirst.hs  TestMonoid.hs  TestOptional.hs  TestSemigroup.hs
16-functor/: 16-functor.hs  CHANGELOG.md  x16-functor.cabal
16-functor/src/: Funcs.hs  HeavyLifting.hs  Instances.hs  Rearrange.hs
16-functor/test/: FuncsTest.hs  HeavyLiftingTest.hs  Main.hs
17-applicative/: CHANGELOG.md  x17-applicative.cabal
17-applicative/src/: BadMonoid.hs  Exercises.hs  Four.hs  Four1.hs  Instances.hs  List.hs  Lookups.hs  Pair.hs  Three.hs  Three1.hs  Two.hs  Validation.hs  ZipList.hs
17-applicative/test/: BadMonoidTest.hs  Four1Test.hs  FourTest.hs  ListTest.hs  Main.hs  PairTest.hs  TestLaws.hs  Three1Test.hs  ThreeTest.hs  TwoTest.hs  ValidationTest.hs  ZipListTest.hs
18-monad/: x18-monad.cabal
18-monad/src/: BadMonad.hs  BahEither.hs  Doing.hs  Funcs.hs  Identity.hs  Kleisli.hs  List.hs  Nope.hs  Novel.hs
18-monad/test/: BadMonadTest.hs  BahEitherTest.hs  FuncsTest.hs  IdentityTest.hs  ListTest.hs  Main.hs  NopeTest.hs
20-foldable/: x20-foldable.cabal
20-foldable/src/: Constant.hs  Filter.hs  Foldz.hs  Four1.hs  Identity.hs  LibFuncs.hs  Maybe.hs  Three.hs  Three1.hs  Two.hs
20-foldable/test/: ConstantTests.hs  ElemTests.hs  Four1Tests.hs  LengthTests.hs  LibFuncsTest.hs  Main.hs  MaximumTests.hs  MinimumTests.hs  NullTests.hs  Three1Tests.hs  ThreeTests.hs  ToListTests.hs  TwoTests.hs
21-traversable/: x21-traversable.cabal
21-traversable/src/: BabyStep.hs  Big.hs  Bigger.hs  Constant.hs  Either.hs  HttpStuff.hs  Identity.hs  List.hs  Optional.hs  Pair.hs  Petrov.hs  SkiFree.hs  Tedious.hs  Three.hs  Tree.hs
21-traversable/test/: BabyStepTest.hs  BigTests.hs  BiggerTests.hs  ConstantTests.hs  EitherTests.hs  IdentityTests.hs  ListTests.hs  Main.hs  OptionalTests.hs  PairTests.hs  SkiFreeTests.hs  ThreeTests.hs  TreeTests.hs
22-reader/: CHANGELOG.md  x22-reader.cabal
22-reader/src/: Ask.hs  Beginning.hs  Foo.hs  Name.hs  ReaderPractice.hs  Warmup.hs
22-reader/test/: BeginningTest.hs  Main.hs  ReaderPracticeTest.hs
23-state/: x23-state.cabal
23-state/src/: Dice.hs  Exercise.hs  FizzBuzz.hs  Moi.hs  Starter.hs  State.hs
23-state/test/: ExerciseTest.hs  Main.hs  MoiTest.hs
24-parser-combinator/: x24.cabal
24-parser-combinator/app/: GPT.hs  Gpt.hs  Main.hs  MainFraction.hs
24-parser-combinator/src/: AltParsing.hs  BT.hs  EarlyTrans.hs  IPV4.hs  IPV6.hs  LearnParsers.hs  LogFile.hs  Marshalling.hs  NumberStringy.hs  Phone.hs  PositiveInt.hs  SemVer.hs  Token.hs  Try.hs
24-parser-combinator/src/Data/: Ini.hs
24-parser-combinator/src/Text/: Fraction.hs
24-parser-combinator/test/: EarlyTransTest.hs  FractionTests.hs  FreeJazzTest.hs  IPV4Test.hs  IPV6Test.hs  LogFileTest.hs  Main.hs  PhoneTest.hs  PositiveIntTest.hs  SemVerTest.hs  TokenTest.hs  TryTest.hs  Util.hs
24-parser-combinator/test/Data/: IniTest.hs
25-compose-types/: x25-compose-types.cabal
25-compose-types/src/: Bifunctor.hs  Compose.hs  Identity.hs  IdentityT.hs
25-compose-types/test/: ComposeTest.hs  IdentityTest.hs  Main.hs
