cabal-version:      3.0
name:               ch09
version:            0.1.0.0
license:            MIT

license-file:       LICENSE
author:             Idris Raja
maintainer:         idris.raja@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common
    ghc-options: -Wall
        -Wno-unused-top-binds
        -Wno-missing-signatures
        -Wno-unused-imports
        -Wno-type-defaults
    build-depends:    base ^>=4.16.4.0

library
    import:           common
    exposed-modules:  Cipher,
                      EnumDef,
                      Words,
                      Comprehension,
                      SquareCube,
                      Bottom,
                      Zip,
                      Char,
                      StdFunc
    hs-source-dirs:   lib
    default-language: Haskell2010

executable ch09
    import:           common
    main-is:          Main.hs
    build-depends:    ch09
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite testsuite
    import:           common
    default-language: Haskell2010
    other-modules:    TestWords
                    , TestComprehension
                    , TestSquareCube
                    , TestZip
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    ch09,
        tasty,
        tasty-hunit,
        tasty-quickcheck,
        tasty-smallcheck,
        tasty-hspec,
        QuickCheck,
        hspec,
        deepseq
