cabal-version:      3.0
name:               folds
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Idris Raja
maintainer:         idris.raja@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common
    ghc-options: -Wall
    default-language: Haskell2010

library
    import:           common
    exposed-modules:  MyLib
                     , FoldExamples
                     , UnderstandingFolds
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src

executable main
    import:           common
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        folds
    hs-source-dirs:   app

test-suite tests
    import:           common
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    TestUnderstandingFolds
    build-depends:
        base ^>=4.16.4.0
        , folds
        , tasty
        , tasty-quickcheck
        , QuickCheck
