name:                hello
version:             0.1.0.0
synopsis:            evil cabal
homepage:            https://github.com/bitemyapp/hello#readme
license-file:        LICENSE
author:              Your Name Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hello
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                        , hello

executable yello
  hs-source-dirs:      src
  main-is:             Rain.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

library
  hs-source-dirs:      src
  exposed-modules:     Hello
                    , DogsRule
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
