cabal-version:      3.0
name:               morse-code
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
build-type:         Simple

common warnings
    ghc-options: -Wall -fwarn-tabs

common language
    default-language: Haskell2010

library morse
    import:           warnings, language
    exposed-modules:  Morse
    build-depends:    base ^>=4.16.4.0,
                      containers
    hs-source-dirs:   src

executable morse-code
    import:           warnings, language
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        containers,
        morse,
        QuickCheck
    hs-source-dirs:   app

executable arbfun
    import:           warnings, language
    main-is:          ArbFun.hs
    build-depends:
        base ^>=4.16.4.0,
        QuickCheck
    hs-source-dirs:   app

test-suite morse-test
    import:           warnings, language
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        containers,
        morse,
        QuickCheck
