cabal-version:      3.0
name:               x14-testing
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Idris Raja
maintainer:         idris.raja@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -Wno-unused-top-binds

library mylib
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable runner
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        mylib,
        QuickCheck
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite testsuite
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        mylib,
        QuickCheck,
        hspec
