cabal-version:      3.0
name:               x17
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-orphans
    default-language: Haskell2010

library
    import:           warnings
    exposed-modules:  Lookups
                    , BadMonoid
                    , ZipList
                    , List
                    , Validation
                    , Pair
                    , Two
                    , Three
                    , Three1
                    , Four
                    , Four1
                    , Combinations
    build-depends:
        base ^>=4.16.4.0
      , checkers
      , tasty-quickcheck
      , QuickCheck
    hs-source-dirs:   src

executable exe
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        x17

    hs-source-dirs:   app

test-suite tests
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    TestLaws
                    , BadMonoidTest
                    , ListTest
                    , ZipListTest
                    , ValidationTest
                    , PairTest
                    , TwoTest
                    , ThreeTest
                    , Three1Test
                    , FourTest
                    , Four1Test
    build-depends:
        base ^>=4.16.4.0
      , x17
      , QuickCheck
      , tasty
      , tasty-quickcheck
      , tasty-hunit
      , containers
      , checkers
