cabal-version:      3.0
name:               x18
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Idris Raja
maintainer:         idris.raja@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Novel
                    , Doing
                    , BadMonad
                    , Kleisli
                    , Nope
                    , BahEither
                    , Identity
                    , List
    build-depends:    base ^>=4.16.4.0
                    , checkers
                    , QuickCheck
    hs-source-dirs:   src
    default-language: Haskell2010

executable x18-monad
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        x18
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite tests
    import:           warnings
    default-language: Haskell2010
    other-modules:    BadMonadTest
                    , NopeTest
                    , BahEitherTest
                    , IdentityTest
                    , ListTest
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0
      , x18
      , QuickCheck
      , tasty
      , tasty-quickcheck
      , tasty-hunit
      , checkers
