cabal-version:      3.0
name:               x21
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  BabyStep
                    , Either
                    , Identity
                    , Constant
                    , Optional
                    , List
                    , Three
                    , Pair
                    , Big
                    , Bigger
                    , Tree
                    , SkiFree
    build-depends:
        base ^>=4.16.4.0
      , tasty-quickcheck
      , checkers
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite tests
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    BabyStepTest
                    , EitherTests
                    , IdentityTests
                    , ConstantTests
                    , OptionalTests
                    , ListTests
                    , ThreeTests
                    , PairTests
                    , BigTests
                    , BiggerTests
                    , TreeTests
                    , SkiFreeTests
    build-depends:
        base ^>=4.16.4.0
      , x21
      , tasty
      , tasty-hunit
      , tasty-quickcheck
      , checkers
