cabal-version:      3.0
name:               x25
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall
    default-language: Haskell2010

library
    import:           warnings
    exposed-modules:
                    Bifunctor
                    Compose
                    Identity
                    IdentityT
    build-depends:
        base ^>=4.16.4.0
        , checkers
        , tasty-quickcheck
    hs-source-dirs:   src

executable exe
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0
        , x25
    hs-source-dirs:   app

test-suite tests
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        ComposeTest
        IdentityTest
    build-depends:
        base ^>=4.16.4.0
        , checkers
        , tasty
        , tasty-hunit
        , tasty-quickcheck
        , x25
